--- a/style.css
+++ b/style.css
@@ -1,7 +1,82 @@
-html, body {
-  margin: 0;
-  padding: 0;
+body {
+  background-color: #262626;
+  cursor: none;
 }
-canvas {
-  display: block;
+html,body{
+  height: 100%;
+}
+#wrapper{
+  position: relative;
+  min-height: 95%;
+  text-align: center;
+}
+#tittle{
+  text-align: center;
+  font-size: 50px;
+  letter-spacing: 0.10em;
+  font-family: 'Ropa Sans', sans-serif;
+  margin:30px
+}
+video{
+  min-width: 300px;
+  max-width:500px;
+  width:50%;
+  height:auto
+}
+#contents{
+  padding-bottom: 5em;
+}
+.text{
+  color: #F2F2F2;
+  text-align: center;
+  margin:20px;
+}
+
+img{
+  max-width: 200px;
+  min-width:100px;
+  width:10%;
+  height:auto;
+}
+footer{
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  height: 1em;
+  left: 48%;
+  transform: translate(-50%,0);
+  -webkit-transform: translate(-50%,0);
+  -ms-transform: translate(-50%,0);
+}
+
+
+/*cursor*/
+.cursor,
+.follower {
+  border-radius: 50%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  cursor: none;
+}
+.cursor {
+  width: 8px;
+  height: 8px;
+  background-color: #A6A6A6;
+  z-index: 1001;
+}
+.follower {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(240,240,240,0.1);
+  transition: transform ease .1s;
+  text-align: center;
+  z-index: 1000;
+  &.is-active {
+    transform: scale(2.4);
+  }
 }
