--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ html,body{
   height: 100%;
 }
 #wrapper{
+  /*
   position: relative;
   min-height: 100%;
   text-align: center;
+  */
+  display:flex;
+  flex-flow: column;
 }
 #tittle{
   text-align: center;
@@ -21,10 +25,12 @@ video{
   min-width: 300px;
   max-width:500px;
   width:50%;
-  height:auto
+  height:auto;
+  margin:10px;
 }
 #contents{
   padding-bottom: 5em;
+  text-align: center;
 }
 .text{
   color: #F2F2F2;
@@ -32,11 +38,12 @@ video{
   margin:20px;
 }
 .titleimage{
+  display: block;
   max-width: 500px;
   min-width:300px;
   width:50%;
   height:auto;
-  margin:30px;
+  margin: 30px auto;
 }
 
 .QR{
@@ -46,12 +53,6 @@ video{
   height:auto;
 }
 
-.QR{
-  max-width: 150px;
-  min-width:100px;
-  width:10%;
-  height:auto;
-}
 footer{
   text-align: center;
   position: absolute;
