--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #262626;
+  background-color: #959595;/*#262626*/
   cursor: none;
 }
 html,body{
@@ -33,17 +33,17 @@ video{
   text-align: center;
 }
 .text{
-  color: #F2F2F2;
+  color: #000000 /*#F2F2F2;*/
   text-align: center;
   margin:20px;
 }
 .titleimage{
   display: block;
-  max-width: 500px;
+  max-width: 800px;
   min-width:300px;
-  width:50%;
+  width:80%;
   height:auto;
-  margin: 30px auto;
+  margin: 20px auto;
 }
 
 .QR{
