--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
-  background-color: #959595;/*#262626*/
+  background-color: #b9b9b9;/*#262626*/
   cursor: none;
+  margin:0;
+  /*スクロール無し*/
+  overflow: hidden
 }
 html,body{
   height: 100%;
@@ -14,55 +17,16 @@ html,body{
   display:flex;
   flex-flow: column;
 }
-#tittle{
-  text-align: center;
-  font-size: 50px;
-  letter-spacing: 0.10em;
-  font-family: 'Ropa Sans', sans-serif;
-  margin:30px
-}
-video{
-  min-width: 300px;
-  max-width:500px;
-  width:50%;
-  height:auto;
-  margin:10px;
-}
-#contents{
-  padding-bottom: 5em;
-  text-align: center;
-}
-.text{
-  color: #000000 /*#F2F2F2;*/
-  text-align: center;
-  margin:20px;
-}
+
 .titleimage{
   display: block;
-  max-width: 800px;
-  min-width:300px;
-  width:80%;
+
+  width:100%;
   height:auto;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 
-.QR{
-  max-width: 150px;
-  min-width:100px;
-  width:10%;
-  height:auto;
-}
 
-footer{
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  height: 1em;
-  left: 48%;
-  transform: translate(-50%,0);
-  -webkit-transform: translate(-50%,0);
-  -ms-transform: translate(-50%,0);
-}
 
 
 /*cursor*/
